fix: allow OPTIONS preflight requests and expose CORS headers in Spring Security